--- a/Index.html
+++ b/Index.html
@@ -10,30 +10,45 @@
 </head>
 <body>
     <div class="container">
-        <h2>Ghost Survey</h2>
-        <div class="FormName">
-            <form>
-                <label for="fname">First name:</label><br>
-                <input type="text" id="fname" name="fname"><br>
-                <label for="lname">Last name:</label><br>
-                <input type="text" id="lname" name="lname">
-                <label for="email"> Warrior Email:</label><br>
-                <input type="text" id="email" name="email"><br>
+        <h1>Ghost Survey</h1>
+            <form class="formname">
+                <ul>
+                    <li><label for="fname">First name:</label><br>
+                    <input type="text" id="fname" name="fname"><br></li>
+                    <li><label for="lname">Last name:</label><br>
+                    <input type="text" id="lname" name="lname"></li>
+                    <li><label for="email"> Warrior Email:</label><br>
+                    <input type="text" id="email" name="email"><br></li>
+                </ul>
             </form>
-        </div>
-
-        <div class="FormBuilding">
-            <p>What Building have you spotted the ghost?</p>
-            <form>
-              <input type="radio" id="html" name="sighting" value="HTML">
-              <label for="html">HTML</label><br>
-              <input type="radio" id="css" name="sighting" value="CSS">
-              <label for="css">CSS</label><br>
-              <input type="radio" id="javascript" name="sighting" value="JavaScript">
-              <label for="javascript">JavaScript</label>
+            <h2>Where have you spotted this ghost?</h2>
+            <form class="formbuilding">
+                <ul>
+                    <li><input type="radio" id="minne" name="sighting" value="minne">
+                    <label for="minne">Minné Hall</label><br></li>
+                    <li><input type="radio" id="library" name="sighting" value="library">
+                    <label for="library">Darrel W. Krueger Library</label><br></li>
+                    <li><input type="radio" id="somsen" name="sighting" value="somsen">
+                    <label for="somsen">Somsen Hall</label></li>
+                    <li><input type="radio" id="phelps" name="sighting" value="phelps">
+                    <label for="phelps">Phelps Hall</label><br></li>
+                    <li><input type="radio" id="pac" name="sighting" value="pac">
+                    <label for="pac">Performing Arts Center</label><br></li>
+                    <li><input type="radio" id="maxwell" name="sighting" value="maxwell">
+                    <label for="maxwell">Maxwell Hall</label><br></li>
+                    <li><input type="radio" id="stark" name="sighting" value="stark">
+                    <label for="stark">Stark Hall</label><br></li>
+                    <li><input type="radio" id="pasteur" name="sighting" value="pasteur">
+                    <label for="pasteur">Pasteur Hall</label><br></li>
+                    <li><input type="radio" id="memorial" name="sighting" value="memorial">
+                    <label for="memorial">Memorial Hall</label><br></li>
+                    <li><input type="radio" id="gildemeister" name="sighting" value="gildemeister">
+                    <label for="gildemeister">Gildemeister Hall</label><br></li>
+                    <li><input type="radio" id="commons" name="sighting" value="commons">
+                    <label for="commons">Kryzsko Commons</label><br></li>
+                </ul>
             </form>
-        </div>
-
+            <h2></h2>
     </div>
 </body>
 </html>
