--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <h1>Ghost Survey</h1>
-            <form class="formname">
+        <form method="post" action="myform-processor.php">
+            <div class="formname">
                 <ul>
                     <li><label for="fname">First name:</label><br>
                     <input type="text" id="fname" name="fname"><br></li>
@@ -20,9 +21,9 @@
                     <li><label for="email"> Warrior Email:</label><br>
                     <input type="text" id="email" name="email"><br></li>
                 </ul>
-            </form>
-            <form class="formbuilding">
-            <h2>Where have you spotted this ghost?</h2>
+            </div>
+            <div class="formbuilding">
+                <h2>Where have you spotted this ghost?</h2>
                 <ul>
                     <li><input type="radio" id="minne" name="sighting" value="minne">
                     <label for="minne">Minné Hall</label><br></li>
@@ -47,25 +48,25 @@
                     <li><input type="radio" id="commons" name="sighting" value="commons">
                     <label for="commons">Kryzsko Commons</label><br></li>
                 </ul>
-            </form>
-            <form class="interaction">
-            <h2>Describe the interaction</h2>
+            </div>
+            <div class="interaction">
+                <h2>Describe the interaction</h2>
                 <textarea id="describe" name="describe" rows="4" cols="50"></textarea>
-            </form>
-            <form class="violence">
-            <h2>Was the ghost violent</h2>
+            </div>
+            <div class="violence">
+                <h2>Was the ghost violent</h2>
                 <ul>
                     <li><input type="radio" id="yes" name="violence" value="yes">
                     <label for="yes">Yes</label><br></li>
                     <li><input type="radio" id="no" name="violence" value="no">
                     <label for="no">No</label><br></li>
                 </ul>
-            </form>  
-            <form class="appearance">
-            <h2>In your best detail, describe the appearance of the ghost.</h2>
+            </div>  
+            <div class="appearance">
+                <h2>In your best detail, describe the appearance of the ghost.</h2>
                 <textarea id="describe" name="describe" rows="4" cols="50"></textarea>
-            </form>
-            <form class="sound">
+            </div>
+            <div class="sound">
                 <h2>Did the ghost make any sounds?</h2>
                     <ul>
                         <li><input type="radio" id="yes" name="sound" value="yes">
@@ -75,11 +76,11 @@
                     </ul>
                 <h2>If yes, what did it sound like?</h2>
                 <textarea id="describe" name="describe" rows="4" cols="50"></textarea>
-            </form>
+            </div>
             
-            <form method="POST" action="submission.html">
-                <input type="submit" value="Submit">
-            </form>
+                <a href="submission.html"><input type="submit"></a>
+            
+        </form>
     </div>
 </body>
 </html>
