attempt to finalize website

--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
                 <textarea id="describe" name="describe" rows="4" cols="50"></textarea>
             </div>
             
-                <a href="submission.html"><input type="submit"></a>
+                <input type="submit">
             
         </form>
-    </div><script>
+    </div>
+    <script>
         function myfunction() {
             var x = document.getElementById("myTopnav");
             if (x.classname === "topnav") {
