--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Ghost Survey</h1>
-        <form method="post" action="myform-processor.php">
+        <form method="post" action="submission.html">
             <div class="formname">
                 <ul>
                     <li><label for="fname">First name:</label><br>
