--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Ghost Survey</h1>
-        <form method="post" action="submission.html">
+        <form method="post">
             <div class="formname">
                 <ul>
                     <li><label for="fname">First name:</label><br>
@@ -78,7 +78,7 @@
                 <textarea id="describe" name="describe" rows="4" cols="50"></textarea>
             </div>
             
-                <input type="submit">
+                <a href="submission.html"><input type="submit"></a>
             
         </form>
     </div>
