--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Ghost Survey</h1>
-        <form method="post">
+        <form method="post" action="submission.html">
             <div class="formname">
                 <ul>
                     <li><label for="fname">First name:</label><br>
@@ -82,50 +82,8 @@
             
         </form>
     </div>
-    <script>
-        function myfunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.classname === "topnav") {
-                x.classname += " responsive";
-            } else {
-                x.classname ="topnav";
-            }
-        }
-        </script>
-        <script>
-            var slideIndex = 1;
-            showSlides(slideIndex);
 
-            function plusSlides(n) {
-              showSlides(slideIndex += n);
-            }
 
-            function currentSlide(n) {
-              showSlides(slideIndex = n);
-            }
-
-            function showSlides(n) {
-              var i;
-              var slides = document.getElementsByClassName("mySlides");
-              var dots = document.getElementsByClassName("dot");
-              if (n > slides.length) {slideIndex = 1}
-              if (n < 1) {slideIndex = slides.length}
-              for (i = 0; i < slides.length; i++) {
-                  slides[i].style.display = "none";
-              }
-              for (i = 0; i < dots.length; i++) {
-                  dots[i].className = dots[i].className.replace(" active", "");
-              }
-              slides[slideIndex-1].style.display = "block";
-              dots[slideIndex-1].className += " active";
-            }
-            </script>
-        <script>
-            'undefined' === typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && 
-            (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'})
-            ,_trfd.push({'ap':'cpsh'}, {'server':'p3plcpn10817'})
-        </script>
-        <script>src="https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js"</script>
 </body>
 </body>
 </html>
